2005-06-03 Niklas Knutsson  <nq@altern.org>

	* Bitwise AND (&), OR (|), XOR
	* Remove old giac stuff

2005-05-15 Niklas Knutsson  <nq@altern.org>

	* Max values seem to have been lost a long time ago -- add them again

2005-05-07 Niklas Knutsson  <nq@altern.org>

	* Initialize ids_i
	* Fix documentation typos
	* Fix includes.h for gcc-4.0

2005-03-06 Niklas Knutsson  <nq@altern.org>

	* 5e2 = 5E2 = 500 and 5e = 5*e

2005-02-08 Niklas Knutsson  <nq@altern.org>
	
	* Update solve2()

2005-02-06 Niklas Knutsson  <nq@altern.org>

	* Dialog with buttons works in gtk+-2.6.2
	* Do not look at function arguments in contains... functions

2005-02-02 Niklas Knutsson  <nq@altern.org>

	* Update integration and differentiation (sin(x) != sin(x)*rad) after change in sin() and cos() behaviour

2005-01-25 Niklas Knutsson  <nq@altern.org>

	* Fix RPN crash and don't add lonely stack value to itself
	* Workaround freeze with message dialog without buttons

2005-01-24 Niklas Knutsson  <nq@altern.org>

	* Use the last operator for leftover stack values

2004-11-30 Niklas Knutsson  <nq@altern.org>

	* Show base (if not decimal, hexadecimal or non-standard) as subscript

2004-11-26 Niklas Knutsson  <nq@altern.org>

	* Fix "Convert result" button
	* Use singular instead of abbreviated name for completion

2004-11-21 Niklas Knutsson  <nq@altern.org>
	
	* Fix draw unit
	* Add alternative multiplication dot signs
	* Enhance preferences safety

2004-11-16 Niklas Knutsson  <nq@altern.org>
	
	* Check if unicode characters can be displayed

2004-11-10 Niklas Knutsson  <nq@altern.org>

	* Revert back somewhat to the old behaviour of not rounding exact numbers not in exponential format 

2004-10-25 Niklas Knutsson  <nq@altern.org>

	* Generate vector function

2004-10-24 Niklas Knutsson  <nq@altern.org>

	* Rearrange plot dialog
	* Do not update plot data when not changed
	* Make x variable separate for each plot function

2004-10-22 Niklas Knutsson  <nq@altern.org>
